# json2excel

./: .gitignore  Json2Excel.spec  README.md  json2excel.py
json2excel/: Cargo.toml
json2excel/src/: backend.rs  gui.rs  main.rs
