[package]
name = "json2excel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "json2excel"
path = "src/main.rs"
windows_subsystem = "windows"

[dependencies]
eframe = { version = "0.33", features = ["glow"] }
egui = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_xlsxwriter = "0.91.0"
rfd = "0.15.4"
anyhow = "1"
chardetng = "0.1"
encoding_rs = "0.8"
regex = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = true


